--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 #Atualização automática do banco
 spring.jpa.hibernate.ddl-auto=update
+#Visualizar queries do sql
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
